bug fix on mobile version on nav

--- a/styles/Nav.module.scss
+++ b/styles/Nav.module.scss
@@ -75,6 +75,7 @@
 
   .name {
     border: none;
+    width: auto;
   }
 
   .list {
